--- a/Análise_da_distribuição_de_clientes_da_Olist_por_cidade_e_estado.ipynb
+++ b/Análise_da_distribuição_de_clientes_da_Olist_por_cidade_e_estado.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrdwdsaawuVPbElAFBMkhK",
+      "authorship_tag": "ABX9TyMm9E+ulOB2M606IEF5TgW7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1905,7 +1905,7 @@
       "source": [
         "# A base de clientes é muito concentrada em poucas cidades ou bem distribuída?\n",
         "\n",
-        "O maior número de clientes está concentrada na região sudesde do brasil, principalmente nos estados de São Paulo e Rio de Janeiro. Dessa forma, visando aumentar o número de clientes a empresa poderia expandir suas estratégias de marketing e abrangência para outros estados brasileiros.\n"
+        "O maior número de clientes está concentrado na região sudesde do brasil, principalmente nos estados de São Paulo e Rio de Janeiro. Dessa forma, visando aumentar o número de clientes, a empresa poderia expandir suas estratégias de marketing e abrangência para outros estados brasileiros.\n"
       ],
       "metadata": {
         "id": "QN6_bvJ3JJPg"
